Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,056
    • Issues 3,056
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1,004
    • Merge requests 1,004
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • MesaMesa
  • mesamesa
  • Issues
  • #1836
Closed
Open
Issue created Sep 25, 2019 by Bugzilla Migration User@bugzilla-migration

[bisected][regression][g45,g965,ilk] piglit arb_fragment_program kil failures

Submitted by clayton craft @craftyguy

Assigned to Marek Olšák @mareko

Link to original bug (#111704)

Description

The following tests fail on G45, ILK, and G965 platforms:

  • spec.arb_fragment_program.kil-swizzle
  • spec.arb_fragment_program.fp-kil

The failure was bisected to the following commit:

commit b97c5edd7aa31fb531a330742a9e20064591fec2
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Fri Sep 6 14:01:51 2019 -0400

    prog_to_nir, tgsi_to_nir: make sure kill doesn't discard NaNs

    Reviewed-by: Connor Abbott <cwabbott0@gmail.com>

Test output:

/tmp/build_root/m64/lib/piglit/bin/shader_runner /tmp/build_root/m64/lib/piglit/tests/spec/arb_fragment_program/kil-swizzle.shader_test -auto -fbo
Probe color at (0,0)
  Expected: 0 255 0 0
  Observed: 0 0 255 0
Test failure on line 35

/tmp/build_root/m32/lib/piglit/bin/fp-kil -auto -fbo
GL_RENDERER = Mesa DRI Intel(R) Ironlake Desktop x86/MMX/SSE2
Probe color at (80,80)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000
Probe color at (12,112)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000

Version: git

Edited Nov 18, 2019 by Ian Romanick
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking